--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,11 @@ context/company-profile.md
 context/user-profile.md
 context/product-profile.md
 
+# Strategic foundation files (contain company strategy)
+context/vision.md
+context/strategy.md
+context/roadmap.md
+
 # Project decisions (private)
 decisions.md
 
