Remove .github from distribution, keep local for repo maintenance

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,6 @@ archive/
 
 # External plugins (local copy, not part of this repo)
 superpowers/
+
+# GitHub Actions (repo-specific, not for end users)
+.github/
